adicionar liberar calificacion

--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
@@ -77,3 +77,10 @@ p{
     margin-bottom: 5px;
     border: 1px solid black;
 }
+.program-bar{
+    background-color: lightgray;
+}
+.program_number{
+    margin-top:auto;
+    margin-bottom:auto;
+}
