--- a/tournament-web-app/src/app/evaluationgrade/evaluationgrade-component.html
+++ b/tournament-web-app/src/app/evaluationgrade/evaluationgrade-component.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
         </div>
-        @if( performance ){
+        @if( performance && canEdit ){
             <button mat-button-icon (click)="onSubmit()" ><mat-icon>done</mat-icon></button>
         }
         
