--- a/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
+++ b/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
@@ -1,7 +1,7 @@
 <div class="bar">
     <span>Examenes</span>
     
-    @if( this.performance.isReleased == false && isNewGradeAvailable ){
+    @if( this.performance.isReleased == false && newGrade > 0){
         <span>Nueva Calificacion :{{ newGrade }}</span>
         <button mat-raised-button color="primary" (click)="onRelease()">Liberar Calificacion</button>
     }
