--- a/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
+++ b/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
@@ -132,7 +132,7 @@
             }               
         </mat-step>  
         <mat-step [stepControl]="firstMedal" errorMessage="un premio es requerido.">
-            <ng-template matStepLabel>Premiacion</ng-template>
+            <ng-template matStepLabel>Premios</ng-template>
             @if( tournamentId && tournament ){
                 <mat-list>
                     @if( tournament.medals.length ){
