--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -60,7 +60,7 @@
                     <mat-expansion-panel [expanded]="false" hideToggle>
                         <mat-expansion-panel-header>
                         <mat-panel-title>
-                            {{ p.performance.label }}
+                            {{idx+1}}.-{{ p.performance.label }}
                         </mat-panel-title>
                         <mat-panel-description>
                             {{ p.performance.fullname }}
