adding podium as component

--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
@@ -92,3 +92,8 @@ p{
     margin-left: 2em;
     color:green;
 }
+.medal{
+    margin-top:auto;
+    margin-bottom:auto;
+    margin-left: 2em;   
+}
