--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -44,68 +44,7 @@
                 }
                 </mat-list>  
             }    
-            <div class="program">
-                <h2>Programa</h2>
-                @if( tournament.program.length > 0){
-                    @if( !tournament.isProgramReleased ){
-                        <button mat-button color="warn" (click)="onReleaseProgram(true)">Publicar Programa</button>
-                    }
-                    @else{
-                        <button mat-button color="warn" (click)="onReleaseProgram(false)">Ocultar Programa</button>
-                    }    
-                }
-
-                <mat-accordion>
-                    @for(p of programRefs; track p;let idx = $index, e = $even){
-                    <mat-expansion-panel [expanded]="false" hideToggle>
-                        <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            {{idx+1}}.-{{ p.performance.label }}
-                        </mat-panel-title>
-                        <mat-panel-description>
-                            {{ p.performance.fullname }}
-
-                            @if( p.noEvaluationsFound ){
-                                <span class="attention">Por favor adicione examenes!</span>
-                            }
-                            @if( p.performance.isReleased == false && p.newGradeAvailable ){
-                                <span class="attention">Nueva calificacion disponible!</span>
-                            }       
-                            @if( p.performance.isReleased == true  ){
-                                <span class="released">Liberado:{{p.performance.grade}}</span>
-                            }   
-                            <span class="medal">{{ p.medal }}</span>
-                            
-                        </mat-panel-description>
-                        </mat-expansion-panel-header>
-                        <div class="bar program-bar">
-                            @if(isAdmin){
-                            <button mat-icon-button (click)="onPerformanceUp(p.id)"><mat-icon>arrow_upward</mat-icon></button>
-                            }
-                            <span class="program_number">{{ idx + 1}}</span>
-                            @if(isAdmin){
-                                <button mat-icon-button (click)="onPerformanceDown(p.id)"><mat-icon>arrow_downward</mat-icon></button>
-                            }
-                            @if( isAdmin && p.performance.isReleased  ){
-                                <span class="score">score:{{ p.performance.grade }}</span>
-                            }
-                            @if( isAdmin || p.performance.isReleased  ){
-                                <span>{{ p.medal }}</span>
-                            }
-                
-                            <span class="spacer"></span>
-                            <button mat-icon-button color="warn" (click)="onReject(p.id)"><mat-icon>remove_circle</mat-icon></button>
-                        </div>      
-                        <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance" (noEvaluationsFound)="onNoEvaluationFound($event,p)" (newGradeAvailable)="onNewGradeAvailable($event,p)"></app-evaluationgrade-list> 
-                    </mat-expansion-panel>
-                    }
-                    @empty{
-                        <span class="attention">Usted necesita aceptar solicitudes de presentacion en el programa</span>
-                    }
-                </mat-accordion>
-                                
-        
-            </div>
+            <app-program-list [tournamentId]="tournamentId" [tournament]="tournament"></app-program-list>
                   
         </mat-tab>
         <mat-tab label="podium">
