--- a/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
+++ b/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
@@ -6,39 +6,45 @@
         <button mat-raised-button color="primary" (click)="onRelease()">Liberar Calificacion</button>
     }
 </div>
+
+<mat-grid-list cols="3" rowHeight="3em"> 
 @if( tournament && performance ){
-    @for( e of tournament.evaluations; track e; ){
-        @for(j of jurors;track j;){
-            <mat-grid-list cols="4" rowHeight="3em">
+    @for( e of tournament.evaluations; track e){
+        @for(j of jurors;track j; let j_idx = $index){
             @if( !isAdmin ){
-                @for(r of getEvaluationRefence(e.id,j.id); track r;){
-                    <mat-grid-tile>{{e.label}}</mat-grid-tile>
-                    <mat-grid-tile>{{j.juror.label}}</mat-grid-tile>                
-                    <mat-grid-tile>
-                        @if( !r.evaluationGrade.isCompleted ){
-                            @if( !performance.isReleased ){
-                                <a [routerLink]="['performance',performanceId,'evaluationGrade',r.id]"><button mat-icon-button><mat-icon>edit</mat-icon></button></a>            
+                @if( getEvaluationRefence(e.id,j.id).length > 0){
+                    @if( j_idx == 0){
+                    <mat-grid-tile colspan="3" [style.background]="'lightblue'">{{e.label}}</mat-grid-tile>
+                    }
+                    @for(r of getEvaluationRefence(e.id,j.id); track r;){
+                        <mat-grid-tile>{{j.juror.label}}</mat-grid-tile>                
+                        <mat-grid-tile>
+                            @if( !r.evaluationGrade.isCompleted ){
+                                @if( !performance.isReleased ){
+                                    <a [routerLink]="['performance',performanceId,'evaluationGrade',r.id]"><button mat-icon-button><mat-icon>edit</mat-icon></button></a>            
+                                }
                             }
-                        }
-                        @else{
-                            completado
-                        }
-                    </mat-grid-tile>
-                    <mat-grid-tile>
-                        @if( isAdmin && !performance.isReleased){
-                            <button mat-icon-button color="warn" (click)="onRemoveEvaluationGrade(e.id,j.id!)"><mat-icon>delete</mat-icon></button>
-                        }                    
-                    </mat-grid-tile>
-                }
-                @empty{
-                    <span>no hay examenes encontrados para {{e.label}}</span>
+                            @else{
+                                <span>completado</span>
+                            }
+                        </mat-grid-tile>
+                        <mat-grid-tile>
+                            @if( isAdmin && !performance.isReleased){
+                                <button mat-icon-button color="warn" (click)="onRemoveEvaluationGrade(e.id,j.id!)"><mat-icon>delete</mat-icon></button>
+                            }                    
+                        </mat-grid-tile>
+                    }
+                    @empty{
+                        <span>no hay examenes encontrados para {{e.label}}</span>
+                    }
                 }
             }
             @else{
-                <mat-grid-tile>{{e.label}}</mat-grid-tile>
-                <mat-grid-tile>{{j.juror.label}}</mat-grid-tile>                   
+                @if( j_idx == 0){
+                    <mat-grid-tile colspan="3" [style.background]="'lightblue'">{{e.label}}</mat-grid-tile>
+                }
                 @for(r of getEvaluationRefence(e.id,j.id); track r;){
-             
+                    <mat-grid-tile>{{j.juror.label}}</mat-grid-tile>
                     <mat-grid-tile>
                         @if( !r.evaluationGrade.isCompleted ){
                             @if( !performance.isReleased ){
@@ -58,19 +64,20 @@
                 }
                 @empty{
                     @if( !performance.isReleased ){
+                        <mat-grid-tile>{{j.juror.label}}</mat-grid-tile>
+                        <mat-grid-tile>
+                            
+                        </mat-grid-tile>                        
                         <mat-grid-tile>
                             @if( isAdmin ){
                                 <button mat-icon-button (click)="onAddEvaluationGrade(e.id,j.id!)"><mat-icon>playlist_add</mat-icon></button>
                             }
                         </mat-grid-tile>
-                        <mat-grid-tile>
-    
-                        </mat-grid-tile>
+
                     }
                 }                
             }
-
-            </mat-grid-list>
         }
     }
 }
+</mat-grid-list>
