--- a/tournament-web-app/src/app/welcome-juror/welcome-juror.component.html
+++ b/tournament-web-app/src/app/welcome-juror/welcome-juror.component.html
@@ -1,18 +1,25 @@
 @if( tournament ){
-    <mat-accordion>
-        @for(p of programRefs; track p;let idx = $index, e = $even){
-        <mat-expansion-panel [expanded]="false" hideToggle>
-            <mat-expansion-panel-header>
-            <mat-panel-title>
-                {{idx+1}}.-{{ p.performance.label }}
-            </mat-panel-title>
-            <mat-panel-description>
-                {{ p.performance.fullname }}
-                <span class="medal">{{ p.medal }}</span>
-            </mat-panel-description>
-            </mat-expansion-panel-header>
-            <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance"></app-evaluationgrade-list> 
-        </mat-expansion-panel>
-        }
-    </mat-accordion>
-}
+    <mat-tab-group #tournamentTab>
+        <mat-tab label="programa">    
+            <mat-accordion>
+                @for(p of programRefs; track p;let idx = $index, e = $even){
+                <mat-expansion-panel [expanded]="false" hideToggle>
+                    <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        {{idx+1}}.-{{ p.performance.label }}
+                    </mat-panel-title>
+                    <mat-panel-description>
+                        {{ p.performance.fullname }}
+                        <span class="medal">{{ p.medal }}</span>
+                    </mat-panel-description>
+                    </mat-expansion-panel-header>
+                    <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance"></app-evaluationgrade-list> 
+                </mat-expansion-panel>
+                }
+            </mat-accordion>
+        </mat-tab>    
+        <mat-tab label="podium">
+            <app-tournament-edit-podium [tournamentId]="tournamentId" [tournament]="tournament"></app-tournament-edit-podium>
+        </mat-tab>        
+    </mat-tab-group>
+}        
