--- a/tournament-web-app/src/app/app.component.html
+++ b/tournament-web-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <mat-toolbar color="accent">
-    <a [routerLink]="['/']"  mat-icon-button>
+    <a [routerLink]="[bussiness.home]"  mat-icon-button>
         <mat-icon>home</mat-icon>
     </a>             
 
